# isded

./: .gitignore  Makefile  Makefile.toml  README.md  run.sh
app/: Cargo.toml  Makefile.toml  build.rs
app/src/: cli.yaml  crypto.rs  ecall.rs  ecalls.rs  enclave.rs  ias.rs  main.rs  msg_stream.rs  subcommands.rs
common_app/: Cargo.toml
common_enclave/: Cargo.toml  src
common_src/: lib.rs  structs.rs
edlgen/: Cargo.toml  Makefile.toml  build.rs
edlgen/src/: main.rs
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  Makefile.toml  Xargo.toml  build.rs
enclave/src/: client_private.der  crypto.rs  ecall.rs  ecall_impl.rs  ecall_macro.rs  ecalls.rs  error.rs  file.rs  guid.rs  jwtmc.rs  lib.rs  output_policy.rs  s_expression.rs  server_public.der  wave64.rs
