[package]
name = "isded"
version = "1.0.0"
authors = ["Baidu", "Fuga Kato"]
build = "build.rs"
edition = '2018'

[build-dependencies]
bindgen = "0.52"

[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_ucrypto = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
dirs = "1.0.2"
clap = "2.20.3"
memmap = "0.6.2"
serde_json = "1.0.44"
failure = "0.1.6"
env_logger = "0.7"
num-traits = "0.2"
num-derive = "0.3"
log = "0.4"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
hex = "0.4"
base64 = "0.12"
reqwest = { version = "0.10", features = ["blocking", "json"] }
