[package]
name = "isded"
version = "1.0.0"
authors = ["Fuga Kato"]
build = "build.rs"
edition = '2018'

[build-dependencies]
bindgen = "0.52"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
sgx_ucrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
dirs = "1.0.2"
clap = { version = "2.33.3", features = ["yaml"] }
memmap = "0.6.2"
serde_json = "1.0.44"
failure = "0.1.6"
env_logger = "0.7"
num-traits = "0.2"
num-derive = "0.3"
log = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
hex = "0.4"
base64 = "0.12"
reqwest = { version = "0.10", features = ["blocking", "json"] }
chrono = "0.4.19"
once_cell = "1.5.2"
yaml-rust = "0.3.5" # clap と揃える
thiserror = "1.0"

