[package]
name = "common"
version = "0.1.0"
authors = ["Fuga Kato <fkato@softlab.cs.tsukuba.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }

